trait based model emulation

--- a/site/posts/include/biblio/bib/FFF.bib
+++ b/site/posts/include/biblio/bib/FFF.bib
@@ -336,6 +336,17 @@
 	pages = {24--33}
 }
 
+@article{rougier:2008:efficient,
+  title={Efficient emulators for multivariate deterministic functions},
+  author={Rougier, Jonathan},
+  journal={Journal of Computational and Graphical Statistics},
+  volume={17},
+  number={4},
+  pages={827--843},
+  year={2008},
+  publisher={Taylor \& Francis}
+}
+
 @article{andersen:asymptotic:2006,
 	title = {Asymptotic size determines species abundance in the marine size spectrum},
 	volume = {168},
