--- a/site/posts/2015-11-09-MV-emulating-size-based-models.rmd
+++ b/site/posts/2015-11-09-MV-emulating-size-based-models.rmd
@@ -80,12 +80,11 @@ preds <- data.frame(#seq(2/3,0.9,l=cube_pred),
             )
     
 pred_pre_list <- expand.grid(preds)
-pred_pre_list_jitter <- apply(pred_pre_list,2,function(x) x+rnorm(length(x),0,sd(x)/5))
-pred_pre_list_jitter[pred_pre_list_jitter<0] <- pred_pre_list[pred_pre_list_jitter<0]                                     
-colnames(pred_pre_list_jitter) <- c('h','r_pp','sigma')
-
+pred_pre_list_jitter <- jitter_preds(preds)
 pred_list <- split(data.frame(pred_pre_list_jitter),1:nrow(pred_pre_list))       
-system.time( simdat <- parallel::mclapply(pred_list,run_SS_sim,mc.cores = 4))
+system.time( simdat <- parallel::mclapply(pred_list,
+                                          run_SS_sim,
+                                          mc.cores = 4))
 
 sim_data <- do.call('rbind',simdat)
 
@@ -93,20 +92,11 @@ sim_data <- do.call('rbind',simdat)
 
 I will keep some of the data here to evaluate the emulator - so I'll make a training and a test set:
 
-```{r make test set}
+```{r check first outputs, Wave 0 of checking for predictions that are wayy off}
 #naset <- which(apply(sim_data,1,function(x) any(is.na(x))))
 #sim_data <- sim_data[-naset,]
 
 pred_pre_list_df <- data.frame(pred_pre_list_jitter)
-pred_pre_list_df$p_reg <- apply(sim_data,1,function(x) any(x<(min(biom)/100)))
-mpreds <- reshape2::melt(pred_pre_list_df)
-
-ggplot(mpreds) + 
-  facet_grid( p_reg ~ variable,scales = "free") + 
-  geom_bar(aes(x=value)) + 
-  theme_bw() + 
-  xlab('Parameter')
-
 
 pred_pre_list_df$p_reg  <- apply(sim_data,1,function(pred){
   t(biom - pred) %*% 
@@ -125,7 +115,7 @@ ggplot(mpreds) +
 ```
 
 
-```{r}
+```{r update training set}
 
 keep <- mpreds %>%
   filter(p_reg ==F) %>%
@@ -145,26 +135,29 @@ new_preds <- data.frame(#seq(2/3,0.9,l=cube_pred),
             sigma = seq(keep[3,2],keep[3,3],l=cube_pred)
             )
     
-new_pred_pre_list <- expand.grid(new_preds)
-new_pred_pre_list_jitter <- sapply(1:ncol(new_pred_pre_list),function(x) {
-    x_old <- new_pred_pre_list[,x]
-    new_x <- x_old+rnorm(length(x_old),0,sd(x_old)/5)
-   sapply(new_x, function(z) min(max(z,keep[x,2]),keep[x,3]))
-}
-)
+new_pred_pre_list_jitter <- jitter_preds(new_preds)
 
-colnames(new_pred_pre_list_jitter) <- c('h','r_pp','sigma')
 mp <- reshape2::melt(new_pred_pre_list_jitter)
-ggplot(mp,aes(x=value)) + geom_histogram(aes(x=value)) + facet_wrap(~Var2,scales='free')
+ggplot(mp,aes(x=value)) + 
+  geom_histogram(aes(x=value)) + 
+  facet_wrap(~Var2,scales='free') + 
+  theme_bw()+ 
+  xlab('Parameter')
+```
 
+```{r run training set}
                         
-new_pred_list <- split(data.frame(new_pred_pre_list_jitter),1:nrow(new_pred_pre_list))       
-system.time( new_simdat <- parallel::mclapply(new_pred_list,run_SS_sim,mc.cores = 4))
+new_pred_list <- split(data.frame(new_pred_pre_list_jitter),
+                       1:nrow(new_pred_pre_list))   
+
+system.time( new_simdat <- parallel::mclapply(new_pred_list,
+                                              run_SS_sim,
+                                              mc.cores = 4))
 
 new_sim_data <- do.call('rbind',new_simdat)
 
 pred_pre_list_df <- data.frame(new_pred_pre_list_jitter)
-pred_pre_list_df$p_reg <- apply(new_sim_data,1,function(x) any(x<(min(biom)/100)))
+pred_pre_list_df$p_reg <- apply(new_sim_data,1,function(x) any(x<(min(biom)/1000)))
 
 mpreds <- reshape2::melt(pred_pre_list_df)
 
@@ -181,7 +174,7 @@ keep <- mpreds %>%
             q3 = max(value)) %>%
   data.frame()
 
-keepers <- !pred_pre_list_df$p_reg#apply(pred_pre_list_df, 1, function(x) x[1] > keep[1,2] & x[1] < keep[1,3] & x[2] > keep[2,2] & x[2] < keep[2,3] & x[3] > keep[3,2] & x[3] < keep[3,3])
+keepers <- !pred_pre_list_df$p_reg#apply(pred_pre_list_df, 1, function(x) x[1] >= keep[1,2] & x[1] <= keep[1,3] & x[2] >= keep[2,2] & x[2] <= keep[2,3] & x[3] >= keep[3,2] & x[3] <= keep[3,3])
 
 sim_data <- new_sim_data[keepers,]
 
@@ -244,7 +237,7 @@ test_pred <- do.call('rbind',test_pred)
 
 ### How well does the emulator perform?
 
-For these inputs, it seems as though the emulator does well in interpolating the results from the size-spectrum for most of the test set, but some are a ways off:
+For these inputs, it seems as though the emulator does well in interpolating the results from the size-spectrum for most of the test set:
 
 ```{r testing}
 
@@ -254,27 +247,9 @@ summary(lm(exp(test_pred$mu)~0+as.vector(t(sim_data_test))))
 
 ```
 
-What's this related to?
-
-```{r test inquiry}
-
-# worst prediction
-worst <- which.max(apply(abs((predictions-log(sim_data_test))/log(sim_data_test))*100,1,max))
-# severe under-prediction in the intermediate w_inf trait biomass
-(predictions[worst,])
-log(sim_data_test[worst,])
-# not really related to the actual test case biomass relative to the training set mean biomass
-
-ins[worst,]
-apply(ins,2,quantile)
-
-``` 
-
-Admittedly, I have some uncertainty about the quality of predictions, but over a number of tries they did seem to correlate with extreme input values - which is a good sign, I would think. 
-
 ### Improving the emulator
 
-It might be possible to get better prediction by adjusting the length scale of the GP covariances. For this, I need a function to optimise the length scales based on the GP marginal likelihoods, and then define the new emulator by those length scales:
+It might be possible to get better prediction by adjusting the length scale of the GP covariances. For this, I use a function to optimise the length scales based on the GP marginal likelihoods, and then define the new emulator by those length scales:
 
 ```{r optimise OPE}
 
@@ -324,7 +299,9 @@ To test the emulator, its worthwhile testing how well the emulator predicts the 
 
 ```{r test opt_OPT response}
 
-testset1 <- data.frame(h=seq(35,66,l=4),
+pred_size <- 20
+
+testset1 <- data.frame(h=seq(35,66,l=pred_size),
                        r_pp = 10,
                        sigma= 1.3)
 
@@ -334,14 +311,14 @@ test_em(testset1,
 
 testset2 <- data.frame(h=40,
                        r_pp = 10,
-                       sigma= seq(1.7,3.5,l=4))
+                       sigma= seq(1.7,3.5,l=pred_size))
 
 test_em(testset2, 
         OPE_opt, 
         'sigma')
 
 testset3 <- data.frame(h=40,
-                       r_pp = lseq(1,10,l=4),
+                       r_pp = lseq(1,10,l=pred_size),
                        sigma= 1.3)
 
 test_em(testset3, 
@@ -350,7 +327,33 @@ test_em(testset3,
 
 ```
 
+```{r test opt_OPT response2}
 
+testset11 <- data.frame(h=seq(35,66,l=pred_size),
+                       r_pp = 1,
+                       sigma= 2.5)
+
+test_em(testset11, 
+        OPE_opt, 
+        'h')
+
+testset22 <- data.frame(h=60,
+                       r_pp = 1,
+                       sigma= seq(1.7,3.5,l=pred_size))
+
+test_em(testset22, 
+        OPE_opt, 
+        'sigma')
+
+testset33 <- data.frame(h=60,
+                       r_pp = lseq(1,10,l=pred_size),
+                       sigma= 2.5)
+
+test_em(testset33, 
+        OPE_opt, 
+        'r_pp')
+
+```
 
 ## References
 <br>
