--- a/site/posts/2015-11-09-MV-emulating-size-based-models.rmd
+++ b/site/posts/2015-11-09-MV-emulating-size-based-models.rmd
@@ -100,7 +100,7 @@ pred_pre_list_df <- data.frame(pred_pre_list_jitter)
 
 pred_pre_list_df$p_reg  <- apply(sim_data,1,function(pred){
   t(biom - pred) %*% 
-    solve(0.5*diag(diag(var(sim_data)))) %*% 
+    solve(0.5*(var(sim_data))) %*% 
     (biom - pred)
 })>3
 
@@ -152,7 +152,7 @@ new_pred_list <- split(data.frame(new_pred_pre_list_jitter),
 
 system.time( new_simdat <- parallel::mclapply(new_pred_list,
                                               run_SS_sim,
-                                              mc.cores = 8))
+                                              mc.cores = 6))
 
 new_sim_data <- do.call('rbind',new_simdat)
 
